src/types/tests/snapshots/tgbot__types__tests__poll__poll.snap
---
source: src/types/tests/poll.rs
expression: "Poll::from(RegularPoll::new(\"poll-id\",\n\"Rust?\").with_is_anonymous(true).with_is_closed(true).with_description(\"test\").with_media(PollMedia::Location(Location::new(1.0,\n2.0))).with_members_only(true).with_options([PollOption::new(\"1\", \"Yes\",\n1000), PollOption::new(\"2\", \"No\", 0)]).with_total_voter_count(1000),)"
---
{
  "type": "regular",
  "allows_multiple_answers": false,
  "allows_revoting": false,
  "id": "poll-id",
  "is_anonymous": true,
  "is_closed": true,
  "members_only": true,
  "options": [
    {
      "persistent_id": "1",
      "text": "Yes",
      "voter_count": 1000
    },
    {
      "persistent_id": "2",
      "text": "No",
      "voter_count": 0
    }
  ],
  "question": "Rust?",
  "total_voter_count": 1000,
  "description": "test",
  "media": {
    "location": {
      "latitude": 1.0,
      "longitude": 2.0
    }
  }
}
