src/types/tests/snapshots/tgbot__types__tests__poll__poll_answer.snap
---
source: src/types/tests/poll.rs
expression: "PollAnswer::new([0], \"poll-id\", User::new(1, \"User\", false))"
---
{
  "option_ids": [
    0
  ],
  "option_persistent_ids": [],
  "poll_id": "poll-id",
  "user": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  }
}
