src/types/tests/snapshots/tgbot__types__tests__poll__poll_answer_voter-2.snap
---
source: src/types/tests/poll.rs
expression: "PollAnswerVoter::from(Chat::Channel(ChannelChat::new(1,\n\"test-channel\").with_username(\"test_channel\"),))"
---
{
  "voter_chat": {
    "type": "channel",
    "id": 1,
    "title": "test-channel",
    "username": "test_channel"
  }
}
