src/types/tests/snapshots/tgbot__types__tests__poll__poll_answer_voter.snap
---
source: src/types/tests/poll.rs
expression: "PollAnswerVoter::from(User::new(1, \"User\", false))"
---
{
  "user": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  }
}
