src/types/tests/snapshots/tgbot__types__tests__poll__quiz.snap
---
source: src/types/tests/poll.rs
expression: "Poll::from(Quiz::new(\"poll-id\",\n\"Rust?\").with_correct_option_ids([0]).with_explanation(Text::from(\"text\").with_entities(vec![TextEntity::bold(0..2)].into_iter().collect())).with_explanation_media(PollMedia::Location(Location::new(1.0,\n2.0))).with_is_anonymous(true).with_is_closed(true).with_description(Text::from(\"test\").with_entities(vec![TextEntity::bold(0..2)].into_iter().collect())).with_options([PollOption::new(\"1\",\n\"Yes\", 1000), PollOption::new(\"2\", \"No\", 0)]).with_total_voter_count(100),)"
---
{
  "type": "quiz",
  "allows_revoting": false,
  "id": "poll-id",
  "is_anonymous": true,
  "is_closed": true,
  "members_only": true,
  "options": [
    {
      "persistent_id": "1",
      "text": "Yes",
      "voter_count": 1000
    },
    {
      "persistent_id": "2",
      "text": "No",
      "voter_count": 0
    }
  ],
  "question": "Rust?",
  "total_voter_count": 100,
  "correct_option_ids": [
    0
  ],
  "description": "test",
  "description_entities": [
    {
      "offset": 0,
      "length": 2,
      "type": "bold"
    }
  ],
  "explanation": "text",
  "explanation_entities": [
    {
      "offset": 0,
      "length": 2,
      "type": "bold"
    }
  ],
  "explanation_media": {
    "location": {
      "latitude": 1.0,
      "longitude": 2.0
    }
  }
}
