src/types/tests/snapshots/tgbot__types__tests__poll__send_poll-2.snap
---
source: src/types/tests/poll.rs
expression: actual_data
---
{
  "chat_id": "1",
  "options": [
    {
      "text": "X"
    }
  ],
  "question": "Q",
  "question_entities": [
    {
      "length": 1,
      "offset": 0,
      "type": "bold"
    }
  ]
}
