src/types/tests/snapshots/tgbot__types__tests__poll__send_poll-4.snap
---
source: src/types/tests/poll.rs
expression: actual_data
---
{
  "allow_adding_options": "true",
  "allow_paid_broadcast": "true",
  "allows_multiple_answers": "true",
  "allows_revoting": "true",
  "business_connection_id": "id",
  "chat_id": "1",
  "country_codes": [
    "US"
  ],
  "description": "test",
  "description_entities": [
    {
      "length": 2,
      "offset": 0,
      "type": "bold"
    }
  ],
  "disable_notification": "true",
  "hide_results_until_closes": "true",
  "is_anonymous": "false",
  "is_closed": "false",
  "media": {
    "latitude": 1.0,
    "longitude": 2.0,
    "type": "location"
  },
  "members_only": "true",
  "message_effect_id": "effect-id",
  "message_thread_id": "1",
  "options": [
    {
      "text": "X"
    }
  ],
  "protect_content": "true",
  "question": "Q",
  "reply_markup": {
    "force_reply": true
  },
  "reply_parameters": {
    "message_id": 1
  },
  "shuffle_options": "true"
}
