src/types/tests/snapshots/tgbot__types__tests__poll__send_poll-5.snap
---
source: src/types/tests/poll.rs
expression: actual_form.into_fields()
---
[
    (
        "chat_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "im_media",
        FormValue::File {
            name: None,
            mime_type: None,
        },
    ),
    (
        "options",
        FormValue::Text(
            "[{\"text\":\"X1\",\"media\":{\"type\":\"audio\",\"caption\":\"Audio\",\"media\":\"attach://im_media\"}},{\"text\":\"X2\",\"media\":{\"type\":\"location\",\"latitude\":1.0,\"longitude\":2.0}},{\"text\":\"X3\",\"media\":{\"type\":\"link\",\"url\":\"https://example.com\"}}]",
        ),
    ),
    (
        "question",
        FormValue::Text(
            "Q",
        ),
    ),
    (
        "type",
        FormValue::Text(
            "regular",
        ),
    ),
]
