src/types/tests/snapshots/tgbot__types__tests__poll__send_poll.snap
---
source: src/types/tests/poll.rs
expression: actual_data
---
{
  "chat_id": "1",
  "options": [
    {
      "text": "X"
    }
  ],
  "question": "Q"
}
